--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
-
+    implementation("io.reactivex.rxjava2:rxkotlin:2.4.0")
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
