--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
     implementation("io.reactivex.rxjava2:rxkotlin:2.4.0")
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.google.android.material:material:1.0.0'
 }
