--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0-beta02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -39,5 +39,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.google.android.material:material:1.0.0'
     implementation "org.permissionsdispatcher:permissionsdispatcher:4.6.0"
+    implementation 'com.google.code.gson:gson:2.8.6'
     kapt "org.permissionsdispatcher:permissionsdispatcher-processor:4.6.0"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
